<resources>

	<string name="app_name">Open Surveyor</string>
	<string name="title_activity_main">Open Surveyor</string>
	<string name="ui_name_buttons">Buttons</string>
	<string name="ui_name_map">Map</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_share">Share</string>
	
	<string name="menu_gps">GPS</string>
	
	<string name="lbl_poi_hint">Add POIs and notes by clicking buttons below</string>
	
	<string name="mi_start_session">Start session</string>
	<string name="mi_stop_session">Stop &amp; save session</string>
	
	<string name="mi_toggle_off">Toggle off</string>
	<string name="mi_toggle_on">Toggle on</string>
	
	<string name="str_ok">OK</string>
	
	<!-- strings for propoerty window -->
	<string name="str_yes">yes</string>
	<string name="str_no">no</string>
	
	<string name="timer_stop">Cancel timer</string>
	
	<string name="linear_start">start</string>
	<string name="linear_end">end</string>
	
	<string name="poi_photo">Photo</string>
	<string name="poi_audio">Audio (%ds)</string>
	
	<string name="preset_photo">Take a photo</string>
	<string name="preset_audio">Audio note</string>
	<string name="preset_text">Text note</string>
	<string name="delete_marker">Delete marker</string>
	<string name="menu_gps_system">System GPS Settings</string>
	

</resources>