<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<!-- android:showAsAction="ifRoom" 
	android:icon="@drawable/ic_ab_share"/ 
	android:showAsAction="ifRoom"
	
	-->
	<item
		android:id="@+id/mi_gps"
		android:title="@string/menu_gps" 
		android:icon="@drawable/ic_ab_gps"
		android:showAsAction="ifRoom"
		android:menuCategory="container" 
		android:orderInCategory="0">
		<menu>
			<item android:id="@+id/mi_gps_system_settings" android:title="@string/menu_gps_system"/>
		</menu>
	</item>
	
	<item
		android:id="@+id/mi_share"
		android:title="@string/menu_share"
		android:icon="@drawable/ic_ab_share"
		android:showAsAction="ifRoom"
		android:actionProviderClass="devedroid.opensurveyor.ShareSessionActionProvider"
		android:menuCategory="container" 
		android:orderInCategory="3"/>

	<item
		android:id="@+id/mi_start_session"
		android:title="@string/mi_start_session"/>
	<item
		android:id="@+id/mi_stop_save_session"
		android:title="@string/mi_stop_session"/>
	<item
		android:id="@+id/mi_settings"
		android:icon="@android:drawable/ic_menu_manage"
		android:title="@string/menu_settings"
		android:visible="false"/>
	
</menu>